Updated Expressions Worksheet
Updated all the projects within the Expressions Worksheet folder.

--- a/Expressions_worksheet/Average shopping bill/index.html
+++ b/Expressions_worksheet/Average shopping bill/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head> 
-		<title>Expression Worksheet</title>
+		<title>Average Shopping Bill</title>
 		<script src="js/script.js"> </script>
 	</head>
 	<body>
