--- a/Expressions_worksheet/Slice of Pie part 1/index.html
+++ b/Expressions_worksheet/Slice of Pie part 1/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head> 
-		<title>Expression Worksheet</title>
+		<title>Slice of Pie Part 1</title>
 		<script src="js/script.js"> </script>
 	</head>
 	<body>
