--- a/Maneval_Sara_Functions_Assignment/index.html
+++ b/Maneval_Sara_Functions_Assignment/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head> 
-		<title>Sparky's Origin</title>
+		<title>Sparky's Legacy</title>
 		<script src="js/script.js"> </script>
 	</head>
 	<body>
